--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -54,6 +54,7 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORE_API_KEY: ${{ secrets.APPSTORE_API_KEY }}
         run: bundle exec fastlane release version:${{ inputs.version }} webrtc_branch:${{ inputs.webrtc_branch }} skip_pods:${{ inputs.skip_pods }} --verbose
+        timeout-minutes: 120
 
       - uses: 8398a7/action-slack@v3
         with:
