--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,13 +49,13 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: StreamWebRTC.xcframework-${{ github.run_id }}
+          name: StreamWebRTC.xcframework.zip
           path: fastlane/StreamWebRTC.xcframework.zip
           retention-days: 7
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: WebRTC.xcframework-${{ github.run_id }}
+          name: WebRTC.xcframework.zip
           path: fastlane/WebRTC.xcframework.zip
           retention-days: 7
