--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,5 +49,13 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: xcframework
+          name: StreamWebRTC.xcframework.zip
           path: fastlane/StreamWebRTC.xcframework.zip
+          retention-days: 7
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: WebRTC.xcframework.zip
+          path: fastlane/WebRTC.xcframework.zip
+          retention-days: 7
