--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -47,7 +47,11 @@ jobs:
           git config --global credential.helper store
           echo "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
 
-      - name: "Fastlane - Publish Release"
+      - name: Setup Fastlane
+        run: make fastlane
+        timeout-minutes: 10
+
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.CI_BOT_GITHUB_TOKEN }}
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
