--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,17 +19,17 @@ jobs:
           ssh-private-key: ${{ secrets.BOT_SSH_PRIVATE_KEY }}
 
       - name: Checkout release pipeline
-        uses: actions/checkout@v4.1.1
-        with:
-          repository: GetStream/stream-webrtc-release-pipeline
-          fetch-depth: 0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/GetStream/stream-webrtc-release-pipeline.git fastlane
 
       - name: Checkout WebRTC branch
-        uses: actions/checkout@v4.1.1
-        with:
-          repository: GetStream/webrtc
-          ref: ${{ inputs.webrtc_branch }}
-          fetch-depth: 0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WEBRTC_BRANCH: ${{ inputs.webrtc_branch }}
+        run: |
+          git clone --branch "${WEBRTC_BRANCH}" --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/GetStream/webrtc.git src
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
@@ -52,7 +52,7 @@ jobs:
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORE_API_KEY: ${{ secrets.APPSTORE_API_KEY }}
-        run: bundle exec fastlane ios build verbose:true maccatalyst_support:true
+        run: cd fastlane && bundle install && bundle exec fastlane ios build verbose:true maccatalyst_support:true
         timeout-minutes: 120
 
       - uses: actions/upload-artifact@v4
