--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,19 @@ jobs:
           echo "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
 
       - name: Checkout release pipeline
-        run: |
-          git clone git@github.com:GetStream/stream-webrtc-release-pipeline.git fastlane
+        uses: actions/checkout@v5
+        with:
+          repository: GetStream/stream-webrtc-release-pipeline
+          path: fastlane
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Checkout WebRTC branch
-        env:
-          WEBRTC_BRANCH: ${{ inputs.webrtc_branch }}
-        run: |
-          git clone --branch "${WEBRTC_BRANCH}" --single-branch git@github.com:GetStream/webrtc.git src
+        uses: actions/checkout@v5
+        with:
+          repository: GetStream/webrtc
+          ref: ${{ inputs.webrtc_branch }}
+          path: src
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
