--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: GetStream/stream-webrtc-release-pipeline
+          ref: main
           path: fastlane
           token: ${{ secrets.GITHUB_TOKEN }}
 
