--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
           ref: main
           path: fastlane
           token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.BOT_SSH_PRIVATE_KEY }}
+          persist-credentials: false
 
       - name: Checkout WebRTC branch
         uses: actions/checkout@v5
@@ -39,6 +41,8 @@ jobs:
           ref: ${{ inputs.webrtc_branch }}
           path: src
           token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.BOT_SSH_PRIVATE_KEY }}
+          persist-credentials: false
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
