--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,6 @@ jobs:
         with:
           repository: GetStream/stream-webrtc-release-pipeline
           ref: main
-          path: fastlane
           token: ${{ secrets.GITHUB_TOKEN }}
           ssh-key: ${{ secrets.BOT_SSH_PRIVATE_KEY }}
           persist-credentials: false
@@ -73,7 +72,7 @@ jobs:
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           APPSTORE_API_KEY: ${{ secrets.APPSTORE_API_KEY }}
-        run: cd fastlane && bundle install && bundle exec fastlane ios build verbose:true maccatalyst_support:true
+        run: cd fastlane && bundle install && bundle exec fastlane ios build root:src verbose:true maccatalyst_support:true
         timeout-minutes: 120
 
       - uses: actions/upload-artifact@v4
