--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -94,13 +94,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: WebRTC.xcframework.zip
-          path: fastlane/WebRTC.xcframework.zip
+          path: fastlane/
 
       - name: Download StreamWebRTC
         uses: actions/download-artifact@v4
         with:
           name: StreamWebRTC.xcframework.zip
-          path: fastlane/StreamWebRTC.xcframework.zip
+          path: fastlane/
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
